...
                                                <rect key="frame" x="125" y="36" width="125" height="70"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="125" id="9qt-6c-Rdg"/>
                                                    <constraint firstAttribute="height" constant="70" id="TqX-3T-frW"/>
                                                </constraints>
                                            </imageView>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="teste@gmail.com" borderStyle="roundedRect" placeholder="User" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="116-NV-gSM">
                                                <rect key="frame" x="16" y="211" width="343" height="50"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="JqR-gB-IXj"/>
                                                </constraints>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="QWEqwe!@#123" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wDs-MC-4VU">
                                                <rect key="frame" x="16" y="282" width="343" height="50"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="46n-8F-OTz"/>
                                                </constraints>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
...
                                                <rect key="frame" x="86" y="584" width="203" height="50"/>
                                                <color key="backgroundColor" red="0.23137254901960785" green="0.28235294117647058" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="Z0K-oF-4b5"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                                <state key="normal" title="Login">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                        <integer key="value" value="4"/>
                                                    </userDefinedRuntimeAttribute>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OCH-iL-ywp">
                                        <rect key="frame" x="335" y="20" width="27" height="27"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="27" id="MQ7-SR-vTw"/>
                                            <constraint firstAttribute="width" constant="27" id="d2W-WW-kyv"/>
                                        </constraints>
                                        <state key="normal" image="logout 2"/>
                                        <connections>
                                            <action selector="logoutAction:" destination="2m3-As-Ocd" eventType="touchUpInside" id="kmp-WD-CUX"/>
                                        </connections>
                                    </button>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="ggo-9R-UIS">
                                        <rect key="frame" x="18" y="77.5" width="309" height="49.5"/>
...
